<resources>
    <string name="app_name">WaveAccessTest</string>

    <string name="home_screen_label">Candidates</string>
    <string name="details_screen_label">Candidate details</string>

    <string name="candidate_active_true">active</string>
    <string name="candidate_active_false">not active</string>
    <string name="registered_description">registered:</string>
    <string name="age_description">age:</string>
    <string name="company_description">company:</string>
    <string name="email_description">email:</string>
    <string name="phone_description">phone:</string>
    <string name="address_description">address:</string>
    <string name="coordinates_description">coordinates:</string>
    <string name="eye_color_description">eye color:</string>
    <string name="favorite_fruit_description">favorite fruit:</string>
    <string name="about_description">about:</string>
    <string name="friends_description">Friends</string>

    <string name="apple_emoji">🍎</string>
    <string name="banana_emoji">🍌</string>
    <string name="strawberry_emoji">🍓</string>

    <string name="no_email_error">No email app was found</string>
    <string name="no_phone_error">No phone app was found</string>
    <string name="no_map_error">No map app was found</string>
</resources>